<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings">Settings</string>
    <string name="interface_language">Interface Language</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="theme">Theme</string>
    <string name="top_headlines_country">Top Headlines Country</string>
</resources>